--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,12 +74,13 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
+  background: #bfcc98;
 }
 
 @layer base {
