more color changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,7 +80,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
-  background: #2b4871;
+  background: #355993;
   opacity: 0.9;
 }
 
